# KobraS1

./: .gitignore  README.md  plano_desenvolvimento_kobra_s1.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/config/: app_settings.json
app/config/materials/: materials.json
app/config/printers/: kobra_s1.json
app/config/processes/: strength_quality.json
app/domain/: __init__.py  material.py  model_analysis.py  printer.py  slicer.py  slicing_profile.py
app/services/: auto_slice_service.py  config_service.py  gcode_validation_service.py  mesh_validation_service.py  model_import_service.py  profile_engine.py  project_export_service.py  report_service.py  slicer_service.py  stl_service.py  three_mf_service.py
app/ui/: main_window.py
docs/: architecture.md  profile_rules.md  slicer_integration.md  slicer_research.md  test_models.md
samples/: calibration_cube_ascii.stl  foreign_printer_cube.3mf
scripts/: create_sample_3mf.py
tests/: test_gcode_validation_service.py  test_profile_engine.py  test_project_export_service.py  test_report_service.py  test_slicer_service.py  test_stl_service.py  test_three_mf_service.py
